--- a/pages/digital-marketing.html
+++ b/pages/digital-marketing.html
@@ -232,24 +232,21 @@
 										<div class="service-details__bottom-icon">
 											<span class="icon-front-end"></span>
 											<h4 class="service-details__bottom-title">content & Structure</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-investigation"></span>
 											<h4 class="service-details__bottom-title">Analysis & Planning</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-increment"></span>
 											<h4 class="service-details__bottom-title">Solutions & Findings</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 								</ul>
@@ -259,15 +256,15 @@
 									<div class="col-xl-6">
 										<div class="service-details__benefits-content">
 											<h3 class="service-details__benefits-title">Our Benefits</h3>
-											<p class="service-details__benefits-text">Duis aute irure dolor in simply
-												free text exist on reprehende voluptate velit esse cillum.</p>
+											<p class="service-details__benefits-text">we allow for better control and monitoring of access to resources, 
+												reducing the risk of unauthorized access and data breaches.</p>
 											<ul class="list-unstyled service-details__benefits-list">
 												<li>
 													<div class="icon">
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Nsectetur cing elit</p>
+														<p>Centralized Management</p>
 													</div>
 												</li>
 												<li>
@@ -275,7 +272,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Suspe ndisse suscip sagittis leo</p>
+														<p>Cost-Effective</p>
 													</div>
 												</li>
 												<li>
@@ -283,7 +280,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Entum estib dignissim posuere</p>
+														<p>Increased Efficiency</p>
 													</div>
 												</li>
 												<li>
@@ -291,7 +288,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>If you are going to use a pass</p>
+														<p>Enhanced Security</p>
 													</div>
 												</li>
 											</ul>
@@ -308,33 +305,30 @@
 								<div class="accrodion-grp" data-grp-name="faq-one-accrodion">
 									<div class="accrodion active">
 										<div class="accrodion-title">
-											<h4>We Help to Create Visual Strategies</h4>
+											<h4>Proper Documentation</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p>Proper documentation of a network is crucial for effective management. To document a network properly, 
+													create a network diagram, document IP addresses, create a device inventory, document network policies and procedures, 
+													keep track of network changes, and create a disaster recovery plan. Regularly update all documentation to reflect any changes made to the network.</p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
 									<div class="accrodion">
 										<div class="accrodion-title">
-											<h4>digital and social markeitng expenses</h4>
+											<h4>Networking Designing</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p>we look at the network scope to determine the size of the network, including the number of users,
+													 devices, and locations that the network will support.</p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
 									<div class="accrodion last-chiled">
 										<div class="accrodion-title">
-											<h4>help to achieve marketing goals</h4>
+											<h4>help help you to achieve the best solution</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
