--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -218,19 +218,11 @@
 							</div>
 							<div class="service-details__content">
 								<h2 class="service-details__title">Graphic Designings</h2>
-								<p class="service-details__text-1">It is a long established fact that a reader will be
-									distracted by the readable content of a page when looking at its layout. The point
-									of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-									as opposed to using 'Content here, content here', making it look like readable
-									English. Many desktop publishing packages and web page editors now use Lorem Ipsum
-									as their default model text, and a search for 'lorem ipsum' will uncover many web
-									sites still in their infancy.</p>
-								<p class="service-details__text-2">Lorem ipsum is simply free text dolor sit amet,
-									consectetur notted adipisicing elit sed do eiusmod tempor incididunt ut labo lonm
-									andhn.</p>
-								<p class="service-details__text-3">Tincidunt elit magnis nulla facilisis sagittis sapien
-									nunc Many desktop publishing packages and web page editors amet ultrices dolores sit
-									ipsum velit purus aliquet massa fringilla leo orci. Sapien nunc amet ultrices.</p>
+								<p class="service-details__text-1">Understand the business's goals and target audience: Before beginning any design work,
+									 it is important to understand the business's goals and target audience to create designs that effectively communicate the intended message.</p>
+								<p class="service-details__text-2">we design principles such as balance, contrast, and hierarchy to create visually appealing designs that capture the viewer's attention.</p>
+								<p class="service-details__text-3"> We Create a consistent brand identity that reflects the business's values and personality. 
+									This can include a logo, color palette, and typography.</p>
 							</div>
 							<div class="service-details__bottom">
 								<ul class="list-unstyled service-details__bottom-list">
@@ -238,24 +230,21 @@
 										<div class="service-details__bottom-icon">
 											<span class="icon-front-end"></span>
 											<h4 class="service-details__bottom-title">content & Structure</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-investigation"></span>
 											<h4 class="service-details__bottom-title">Analysis & Planning</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-increment"></span>
 											<h4 class="service-details__bottom-title">Solutions & Findings</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 								</ul>
