--- a/pages/mobile-applications.html
+++ b/pages/mobile-applications.html
@@ -231,24 +231,21 @@
 										<div class="service-details__bottom-icon">
 											<span class="icon-front-end"></span>
 											<h4 class="service-details__bottom-title">content & Structure</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-investigation"></span>
 											<h4 class="service-details__bottom-title">Analysis & Planning</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-increment"></span>
 											<h4 class="service-details__bottom-title">Solutions & Findings</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 								</ul>
