--- a/pages/website-development.html
+++ b/pages/website-development.html
@@ -308,40 +308,31 @@ the best web design company in Africa. Our innovative custom design services wil
 								<div class="accrodion-grp" data-grp-name="faq-one-accrodion">
 									<div class="accrodion active">
 										<div class="accrodion-title">
-											<h4>We Help to Create Visual Strategies</h4>
+											<h4>We Help to Create website for your business</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
 									<div class="accrodion">
 										<div class="accrodion-title">
-											<h4>digital and social markeitng expenses</h4>
+											<h4>digital and web Development expenses</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
 									<div class="accrodion last-chiled">
 										<div class="accrodion-title">
-											<h4>help to achieve marketing goals</h4>
+											<h4>help to achieve web development goals</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
