Update on:removing some link from the page.

--- a/index.html
+++ b/index.html
@@ -98,21 +98,13 @@
                                         <li><a href="./pages/cyberSecurity.html">CyberSecurity</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Projects</a>
-                                    <ul>
-                                        <li><a href="./pages/project.html">Projects</a></li>
-                                        <li><a href="./pages/project-details.html">Project Details</a></li>
-                                    </ul>
+                                <li>
+                                    <a href="./pages/project.html">Projects</a>
                                 </li>
                                  
-                                <li class="dropdown">
-                                    <a href="#">Blog</a>
-                                    <ul>
-                                        <li><a href="./pages/blog.html">Blog Posts</a></li>
-                                        <li><a href="./pages/blog-sidebar.html">Blog Sidebar</a></li>
-                                        <li><a href="./pages/blog-details.html">Blog Details</a></li>
-                                    </ul>
+                                <li>
+                                    <a href="./pages/blog.html">Blog</a>
+                                
                                 </li>
                                 <li><a href="./pages/contact.html">Contact</a></li>
                             </ul>
