--- a/pages/blog.html
+++ b/pages/blog.html
@@ -100,21 +100,12 @@
                                         <li><a href="cyberSecurity.html">CyberSecurity</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Projects</a>
-                                    <ul>
-                                        <li><a href="project.html">Projects</a></li>
-                                        <li><a href="project-details.html">Project Details</a></li>
-                                    </ul>
-                                </li>
+                                <li>
+                                    <a href="project.html">Projects</a>
+                                 </li>
                                  
-                                <li class="dropdown current">
+                                <li>
                                     <a href="blog.html">Blog</a>
-                                    <!-- <ul>
-                                        <li><a href="blog.html">Blog Posts</a></li>
-                                        <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul> -->
                                 </li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
