--- a/pages/social-marketing.html
+++ b/pages/social-marketing.html
@@ -218,19 +218,12 @@
 							</div>
 							<div class="service-details__content">
 								<h2 class="service-details__title">Social Marketings</h2>
-								<p class="service-details__text-1">It is a long established fact that a reader will be
-									distracted by the readable content of a page when looking at its layout. The point
-									of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-									as opposed to using 'Content here, content here', making it look like readable
-									English. Many desktop publishing packages and web page editors now use Lorem Ipsum
-									as their default model text, and a search for 'lorem ipsum' will uncover many web
-									sites still in their infancy.</p>
-								<p class="service-details__text-2">Lorem ipsum is simply free text dolor sit amet,
-									consectetur notted adipisicing elit sed do eiusmod tempor incididunt ut labo lonm
-									andhn.</p>
-								<p class="service-details__text-3">Tincidunt elit magnis nulla facilisis sagittis sapien
-									nunc Many desktop publishing packages and web page editors amet ultrices dolores sit
-									ipsum velit purus aliquet massa fringilla leo orci. Sapien nunc amet ultrices.</p>
+								<p class="service-details__text-1">Social media marketing for businesses involves using social media platforms to promote a product, service, or brand.
+									 The key steps involved in social media marketing for business include defining goals and target audience, choosing social media platforms, developing 
+									 a content strategy, creating engaging content, building a community, monitoring analytics, and adjusting the strategy as needed. Effective social media marketing 
+									 can increase online visibility, improve customer engagement, and ultimately drive sales and revenue for the business.</p>
+								<p class="service-details__text-2">we define the business's goals and identify the target audience the business is trying to reach</p>
+								<p class="service-details__text-3">we hoose the social media platforms that align with the business's goals and target audience.</p>
 							</div>
 							<div class="service-details__bottom">
 								<ul class="list-unstyled service-details__bottom-list">
@@ -238,24 +231,21 @@
 										<div class="service-details__bottom-icon">
 											<span class="icon-front-end"></span>
 											<h4 class="service-details__bottom-title">content & Structure</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-investigation"></span>
 											<h4 class="service-details__bottom-title">Analysis & Planning</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-increment"></span>
 											<h4 class="service-details__bottom-title">Solutions & Findings</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text"></p>
 										</div>
 									</li>
 								</ul>
@@ -265,15 +255,15 @@
 									<div class="col-xl-6">
 										<div class="service-details__benefits-content">
 											<h3 class="service-details__benefits-title">Our Benefits</h3>
-											<p class="service-details__benefits-text">Duis aute irure dolor in simply
-												free text exist on reprehende voluptate velit esse cillum.</p>
+											<p class="service-details__benefits-text">Effective social media marketing give a business a competitive advantage by 
+												allowing them to reach and engage with customers in ways that their competitors may not be.</p>
 											<ul class="list-unstyled service-details__benefits-list">
 												<li>
 													<div class="icon">
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Nsectetur cing elit</p>
+														<p>Increased brand awareness</p>
 													</div>
 												</li>
 												<li>
@@ -281,7 +271,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Suspe ndisse suscip sagittis leo</p>
+														<p>Improved customer engagement</p>
 													</div>
 												</li>
 												<li>
@@ -289,7 +279,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Entum estib dignissim posuere</p>
+														<p>Enhanced marketing efforts</p>
 													</div>
 												</li>
 												<li>
@@ -297,7 +287,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>If you are going to use a pass</p>
+														<p>Increased website traffic and sales</p>
 													</div>
 												</li>
 											</ul>
@@ -318,10 +308,7 @@
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
@@ -331,10 +318,7 @@
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
@@ -344,10 +328,7 @@
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
