--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                                 </div>
                                 <div class="get-to-know__person-content">
                                     <h2 class="get-to-know__person-name">Prince Sam</h2>
-                                    <p class="get-to-know__person-founder">CEO & co Founder</p>
+                                    <p class="get-to-know__person-founder">CEO & Founder</p>
                                 </div>
                             </div>
                         </div>
@@ -697,11 +697,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO & Co Founder</p>
+                                    <p class="team-one__title">CEO & Founder</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Prince Sam</h4>
-                                    <p class="team-one__hover-title">CEO & Co Founder</p>
+                                    <p class="team-one__hover-title">CEO & Founder</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -777,11 +777,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO & Co Founder</p>
+                                    <p class="team-one__title">CEO & Founder</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Prince Sam</h4>
-                                    <p class="team-one__hover-title">CEO & Co Founder</p>
+                                    <p class="team-one__hover-title">CEO & Founder</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -857,11 +857,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO & Co Founder</p>
+                                    <p class="team-one__title">CEO & Founder</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Prince Sam</h4>
-                                    <p class="team-one__hover-title">CEO & Co Founder</p>
+                                    <p class="team-one__hover-title">CEO & Founder</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -1084,7 +1084,7 @@
                                                     <div class="tabs-content__experience-icon">
                                                         <span class="icon-consulting"></span>
                                                     </div>
-                                                    <h3 class="tabs-content__experience-title">We have over 10 years of
+                                                    <h3 class="tabs-content__experience-title">We have over 6 years of
                                                         experience</h3>
                                                     <a href="about.html" class="tabs-content__experience-btn">Read
                                                         More</a>
@@ -1137,7 +1137,7 @@
                                                     <div class="tabs-content__experience-icon">
                                                         <span class="icon-consulting"></span>
                                                     </div>
-                                                    <h3 class="tabs-content__experience-title">We have over 10 years of
+                                                    <h3 class="tabs-content__experience-title">We have over 6 years of
                                                         experience</h3>
                                                     <a href="about.html" class="tabs-content__experience-btn">Read
                                                         More</a>
@@ -1189,7 +1189,7 @@
                                                     <div class="tabs-content__experience-icon">
                                                         <span class="icon-consulting"></span>
                                                     </div>
-                                                    <h3 class="tabs-content__experience-title">We have over 10 years of
+                                                    <h3 class="tabs-content__experience-title">We have over 6 years of
                                                         experience</h3>
                                                     <a href="about.html" class="tabs-content__experience-btn">Read
                                                         More</a>
