--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -212,7 +212,7 @@
 								<p class="service-details__text-1">Understand the business's goals and target audience: Before beginning any design work,
 									 it is important to understand the business's goals and target audience to create designs that effectively communicate the intended message.</p>
 								<p class="service-details__text-2">we design principles such as balance, contrast, and hierarchy to create visually appealing designs that capture the viewer's attention.</p>
-								<p class="service-details__text-3"> We Create a consistent brand identity that reflects the business's values and personality. 
+								<p class="service-details__text-3"> We create a consistent brand identity that reflects the business's values and personality. 
 									This can include a logo, color palette, and typography.</p>
 							</div>
 							<div class="service-details__bottom">
@@ -245,15 +245,15 @@
 									<div class="col-xl-6">
 										<div class="service-details__benefits-content">
 											<h3 class="service-details__benefits-title">Our Benefits</h3>
-											<p class="service-details__benefits-text">Duis aute irure dolor in simply
-												free text exist on reprehende voluptate velit esse cillum.</p>
+											<p class="service-details__benefits-text"> To play a key role in our building and strengthening an organization's brand and reputation,
+												 while also helping to communicate important messages and engage with audiences.</p>
 											<ul class="list-unstyled service-details__benefits-list">
 												<li>
 													<div class="icon">
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Nsectetur cing elit</p>
+														<p>Professional image</p>
 													</div>
 												</li>
 												<li>
@@ -261,7 +261,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Suspe ndisse suscip sagittis leo</p>
+														<p>Brand recognition</p>
 													</div>
 												</li>
 												<li>
@@ -269,7 +269,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Entum estib dignissim posuere</p>
+														<p>Increased engagement</p>
 													</div>
 												</li>
 												<li>
@@ -277,7 +277,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>If you are going to use a pass</p>
+														<p>Communication</p>
 													</div>
 												</li>
 											</ul>
@@ -298,10 +298,7 @@
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
@@ -311,10 +308,7 @@
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
@@ -324,10 +318,7 @@
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p></p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
