--- a/pages/social-marketing.html
+++ b/pages/social-marketing.html
@@ -223,7 +223,7 @@
 									 a content strategy, creating engaging content, building a community, monitoring analytics, and adjusting the strategy as needed. Effective social media marketing 
 									 can increase online visibility, improve customer engagement, and ultimately drive sales and revenue for the business.</p>
 								<p class="service-details__text-2">we define the business's goals and identify the target audience the business is trying to reach</p>
-								<p class="service-details__text-3">we hoose the social media platforms that align with the business's goals and target audience.</p>
+								<p class="service-details__text-3">we choose the social media platforms that align with the business's goals and target audience.</p>
 							</div>
 							<div class="service-details__bottom">
 								<ul class="list-unstyled service-details__bottom-list">
@@ -304,7 +304,7 @@
 								<div class="accrodion-grp" data-grp-name="faq-one-accrodion">
 									<div class="accrodion active">
 										<div class="accrodion-title">
-											<h4>We Help to Create Visual Strategies</h4>
+											<h4>We help to Create Visual Strategies</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
@@ -324,7 +324,7 @@
 									</div>
 									<div class="accrodion last-chiled">
 										<div class="accrodion-title">
-											<h4>help to achieve marketing goals</h4>
+											<h4>We help you to achieve marketing goals</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
