--- a/pages/website-development.html
+++ b/pages/website-development.html
@@ -299,7 +299,7 @@ the best web design company in Africa. Our innovative custom design services wil
 								<div class="accrodion-grp" data-grp-name="faq-one-accrodion">
 									<div class="accrodion active">
 										<div class="accrodion-title">
-											<h4>We Help to Create website for your business</h4>
+											<h4>We help you to Create website for your business</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
@@ -309,7 +309,7 @@ the best web design company in Africa. Our innovative custom design services wil
 									</div>
 									<div class="accrodion">
 										<div class="accrodion-title">
-											<h4>digital and web Development expenses</h4>
+											<h4>documentation and web Development expenses</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
