--- a/pages/contact.html
+++ b/pages/contact.html
@@ -182,8 +182,8 @@
                                 <span class="icon-address"></span>
                             </div>
                             <h3 class="contact-info__title">address</h3>
-                            <p class="contact-info__text">Mankessim station roundAbout C/R
-                                Kumasi station A/R Africa
+                            <p class="contact-info__text">Mankessim C/R-
+                                Kumasi A/R Ghana -Africa
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="300ms">
