--- a/pages/about.html
+++ b/pages/about.html
@@ -727,7 +727,7 @@
                                     <h3 class="footer-widget__title">About</h3>
                                     <div class="footer-widget__about-text-box">
                                         <p class="footer-widget__about-text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology.
-										This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.</p>
+										</p>
                                     </div>
                                     <ul class="footer-widget__about-contact list-unstyled">
                                         <li>
@@ -751,7 +751,7 @@
                                                 <i class="fas fa-map-marker-alt"></i>
                                             </div>
                                             <div class="text">
-                                                <p>Mankessim station roundAbout C/R
+                                                <p>Mankessim station roundAbout C/R-
 												 Kumasi station A/R Africa</p>
                                             </div>
                                         </li>
